infra/k8s/maps-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maps-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maps-backend
  template:
    metadata:
      labels:
        app: maps-backend
    spec:
      containers:
        - name: maps-backend
          image: logos164/maps-backend
---
apiVersion: v1
kind: Service
metadata:
  name: maps-backend-srv
spec:
  selector:
    app: maps-backend
  ports:
    - name: maps-backend
      protocol: TCP
      port: 3000
      targetPort: 3000
