infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: truckmaps.dev
      http:
        paths:
          - path: /assets/?(.*)
            backend:
              serviceName: maps-backend-srv
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: maps-backend-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: maps-frontend-srv
              servicePort: 3000
